<resources>
    <string name="app_name">Wegoo1</string>
    <string name="title_activity_main">Wegoo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_details">PatientDetails</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register</string>
    <string name="server_registered">successfully added device!</string>
    <string name="server_register_error">Could not register device</string>
    <string name="server_unregistered">successfully removed device!</string>
    <string name="server_unregister_error">Could not unregister device</string>
    <string name="gcm_defaultSenderId">790141553774</string>
    <string name="google_app_id">790141553774</string>
    <string name="title_activity_sensor_data">SensorData</string>

    <string name="curved_text_value">In/Out Facility</string>
    <string name="home_screen_observations">OBSERVATIONS</string>
    <string name="total_observations">2375</string>
    <string name="percent_value">65%</string>
    <string name="home_screen_observed_compliance">OBSERVED\nCOMPLIANCE</string>
    <string name="content_description">This is an image…</string>
    <string name="feedback">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable</string>
    <string name="hint_name">Patient Name</string>
    <string name="hint_id">National ID</string>
    <string name="btn_sign_up">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_location">Location</string>
    <string name="err_messg_name">Please enter name</string>
    <string name="err_mess_id">Please enter correct ID</string>
    <string name="app_title">Wegoo device not connected</string>
    <string name="refreshing">Refleshing</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
