<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_pressed"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hehelabs.wegoo1.RegisterPatientInfo">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Register Patient Info"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_id"
                    android:inputType="number"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />



            <!--<ProgressBar-->
                <!--android:id="@+id/loading_spinner"-->
                <!--android:layout_gravity="center"-->
                <!--style="?android:progressBarStyle"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">
                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:theme="@style/myRadionButton"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:theme="@style/myRadionButton"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_location"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_location"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btn_sign_up"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
